--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -53,11 +53,13 @@ h1, h2, h3, h4
 
   ul
     padding-left: 20px
+    margin-bottom: 25px
   ul.adres
     padding-left: 0px
     @media screen and (max-width: $screen-xs-max)
       text-align: center
-
+  .table
+    margin-bottom: 25px
   h2
     font-size: 19px
     margin-top: 20px
