--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8289,13 +8289,9 @@ footer {
 
 header.container-fluid {
   position: relative;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 0px;
+  margin: 0px;
   height: 400px; }
-  @media screen and (max-width: 767px) {
-    header.container-fluid {
-      padding: 0px;
-      margin: 0px; } }
   header.container-fluid:before {
     content: "";
     position: absolute;
