fix for smartphone opacity 1

--- a/assets/css/3-sections/_doelgroepen.sass
+++ b/assets/css/3-sections/_doelgroepen.sass
@@ -61,5 +61,6 @@ section.doelgroepen, .row.doelgroepen
           display: none
         .flipbox.flipbox-back
           +transform(rotateY(0deg))
+          opacity: 1
   .row.doelgroepen
     padding-bottom: 30px
