--- a/assets/css/1-tools/_variables.sass
+++ b/assets/css/1-tools/_variables.sass
@@ -67,6 +67,7 @@ $input-bg: white
 $input-border: $brand
 $input-border-radius: 0px
 $input-border-focus: $accent
+$input-bg-disabled : rgb(242,242,242)
 //$state-danger-text: white
 
 // breadcrumbs
