--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -25,6 +25,7 @@
 @import '3-sections/themas'
 @import '3-sections/wat-wij-doen'
 @import '3-sections/wie-we-zijn'
+@import '3-sections/workshop'
 
 // modules
 @import '4-modules/forms'
