--- a/assets/css/3-sections/_agenda.sass
+++ b/assets/css/3-sections/_agenda.sass
@@ -8,9 +8,9 @@
     margin-bottom: 30px
     .agenda-item
       +transition(all 300ms ease-in-out)
-      border-bottom: 1px solid $brand
-      margin-bottom: 15px
-      padding-bottom: 5px
+      background-color: $input-bg-disabled
+      margin-bottom: 30px
+      padding: 30px
       ul
         padding-left: 0px
       h3
@@ -28,3 +28,7 @@
         font-size: 14px
       span.date
         margin-right: 15px
+      .col-md-8
+        text-align: right
+        @media screen and (max-width: $screen-xs-max)
+          padding-top: 30px
