--- a/_includes/home-doelgroepen.html
+++ b/_includes/home-doelgroepen.html
@@ -1,7 +1,7 @@
 <section class="container-fluid doelgroepen">
   <div class="container">
     <div class="row">{% for post in site.tags['doelgroep'] %}{% if post.publish != false %}
-      <div class="col-sm-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div ontouchstart="this.classList.toggle('hover');" class="flipbox-container">
           <div class="flipper">
             <div class="flipbox flipbox-front">
