--- a/_layouts/overzicht.html
+++ b/_layouts/overzicht.html
@@ -26,7 +26,8 @@ layout: default
 					<li role="presentation"><a href="#fasen" aria-controls="fasen" role="tab" data-toggle="tab">fasen</a></li>
 					<li role="presentation"><a href="#methoden" aria-controls="methoden" role="tab" data-toggle="tab">methoden</a></li>
 					<li role="presentation"><a href="#team" aria-controls="team" role="tab" data-toggle="tab">team</a></li>
-					<li role="presentation"><a href="#trajecten" aria-controls="trajecten" role="tab" data-toggle="tab">trajecten</a></li>
+					<li role="presentation"><a href="#trajecten" aria-controls="trajecten" role="tab" data-toggle="tab">trajecten (zakelijk)</a></li>
+					<li role="presentation"><a href="#analyses" aria-controls="analyses" role="tab" data-toggle="tab">analyses (zakelijk)</a></li>
 				</ul>
 				<div class="tab-content">
 					<div class="tab-pane fade in active" role="tabpanel" id="overig">
@@ -405,6 +406,50 @@ layout: default
 								<tbody>
 									{% assign count = 0 %}
 									{% for post in site.tags['traject'] %}
+									{% assign count = count | plus: 1 %}
+									<tr>
+										<td>{{count}}</td>
+										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
+										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
+										<td><a href="{{post.url}}">{{post.title}}</a></td>
+										<td><a href="{{post.url}}">{{post.url}}</a></td>
+										<td>
+											{% assign t = 0 %}
+											{% for tag in post.tags %}
+											{% assign t = t | plus: 1 %}
+											{% if t == 1 %}
+											<ul class="list-unstyled">
+											{% endif %}
+												<li>{{tag}}</li>
+											{% endfor %}
+											{% if t > 1 %}
+											</ul>
+											{% endif %}
+										</td>
+									</tr>
+									{% endfor %}
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="tab-pane fade" role="tabpanel" id="analyses">
+						<h3>Analyses</h3>
+						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/analyses"><i class="fa fa-plus"></i> nieuwe analyse toevoegen »</a></p>
+						<div class="table-responsive">
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>live</th>
+										<th>edit</th>
+										<th>titel</th>
+										<th>permalink</th>
+										<th><i class="fa fa-tags"></i></th>
+									</tr>
+								</thead>
+								<tbody>
+									{% assign count = 0 %}
+									{% for post in site.tags['analyse'] %}
 									{% assign count = count | plus: 1 %}
 									<tr>
 										<td>{{count}}</td>
